# BTHOGAYI

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  SECURITY_GUIDE.md  SETUP.md  SUPABASE_SQL_FIX.sql  database-improvements.sql  env.example  fix-users-table.sql  fix_rls_recursion.sql  index.html  next.config.js  package-lock.json  package.json  sample_data.sql  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1755905795489-3a4218cbd3de68.mjs  vite.config.ts.timestamp-1756159091792-906c4a441a205.mjs
app/: layout.tsx
app/auth/: page.tsx
app/connect/: page.tsx
app/daily-match/: page.tsx
app/dashboard/: page.tsx
app/dating/: page.tsx
app/messages/: page.tsx
app/onboarding/: page.tsx
app/profile/: page.tsx
app/settings/: page.tsx
app/shipping/: page.tsx
components/auth/: auth-guard.tsx  google-auth-button.tsx
components/invite/: invite-friends-modal.tsx
components/landing/: campus-map.tsx  cta-section.tsx  faq-section.tsx  features-section.tsx  (+5 more)
lib/: auth.ts  connections.ts  daily-matches.ts  interests.ts  matching-algorithm.ts  messaging.ts  notifications.ts  recommendation-api.ts  reports.ts  shipping.ts  store.ts  supabase.ts
public/: manifest.json
recommendation-engine/: .env.example  Dockerfile  Procfile  README.md  build.sh  deploy.sh  pyproject.toml  render.yaml  requirements.txt  test_security.py
recommendation-engine/app/: __init__.py  auth.py  database.py  main.py  models.py  recommendation_engine.py
src/: App.tsx  index.css  vite-env.d.ts
supabase/: bits_sample_data.sql  sample_data_realistic.sql  secure_sample_data.sql
(+72 files in other folders)
