[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitspark-backend"
version = "1.0.0"
description = "BITSPARK Recommendation Engine Backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.4.0",
    "asyncpg>=0.28.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["app"]
